kubernetes/test/app-test-deployment-FastAPI.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-project-api-test
  namespace: connorfeng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-project-api-test
  template:
    metadata:
      labels:
        app: final-project-api-test
    spec:
      containers:
        - name: final-project-api-test
          imagePullPolicy: Always
          image: computationalconnor/final-project-api:test  # test tag
          ports:
            - containerPort: 8000
          env:
            - name: REDIS_HOST
              value: final-project-redis-service-test  # points to test redis service
            - name: LOG_LEVEL
              value: DEBUG
