kubernetes/test/app-test-ingress-FastAPI.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: final-project-fastapi-ingress
  namespace: connorfeng
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"

spec:
  ingressClassName: nginx
  rules:
  - host: "connorfeng-fastapi.coe332.tacc.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: final-project-api-service-test
            port:
              number: 8000
